--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
-    "app_id": "com.moodle.moodlemobile",
-    "appname": "Moodle Mobile",
-    "desktopappname": "Moodle Desktop",
+    "app_id": "com.moodle.cisionline",
+    "appname": "Tadawul Exams",
+    "desktopappname": "Tadawul Exams",
     "versioncode": 3700,
     "versionname": "3.7.0-dev",
     "cache_expiration_time": 300000,
@@ -54,20 +54,11 @@
     "wsservice": "moodle_mobile_app",
     "wsextservice": "local_mobile",
     "demo_sites": {
-        "student": {
-            "url": "https:\/\/school.demo.moodle.net",
-            "username": "student",
-            "password": "moodle"
-        },
-        "teacher": {
-            "url": "https:\/\/school.demo.moodle.net",
-            "username": "teacher",
-            "password": "moodle"
-        }
+     
     },
     "customurlscheme": "moodlemobile",
-    "siteurl": "",
-    "sitename": "",
+    "siteurl": "https://www.TadawulExams.com",
+    "sitename": "Tadawul Learning Portal",
     "multisitesdisplay": "",
     "skipssoconfirmation": false,
     "forcedefaultlanguage": false,
